[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddfUtils"
version = "0.1.0"
description = "Utilities for DDF analysis"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "uproot",
]

[tool.setuptools]
packages = { find = { include = ["ddfUtils", "ddfUtils.*"] } }

